test_fixtures/for/statement_increment.lox
// ParserError: UnexpectedExpressionToken found OpenBrace at l2c24
for (var a = 1; a < 2; {}) {}
